# job-flow

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: auth.py  config.py  main.py  mcp_server.py  profile.py  settings_store.py
app/api/: applications.py  auth.py  captures.py  discovery.py  health.py  job_actions.py  lifecycle.py  metrics.py  settings.py  usage.py
app/db/: models.py  session.py
app/graph/: checkpointer.py  context.py  runtime.py  state.py  workflow.py
app/llm/: budget.py  cost.py  json_utils.py  prompts.py  router.py  types.py  usage.py
app/mcp/: tool_handlers.py
app/nodes/: _common.py  evaluator.py  generator.py  matcher.py  preprocess.py  profile.py
app/observability/: log.py  scrub.py
config/: profile.example.yml
extension/: README.md  manifest.json
product-requirements/: ARCHITECTURE.md  CareerOS_AI_Product_Spec_v2.md  EVAL_REPORT.md  README.md  ROADMAP.md  THREAT_MODEL.md  linkedin-indeed-integration.md  mcp-server.md
tests/: conftest.py  test_auth.py  test_budget_guard.py  test_captures_endpoint.py  test_cost_calculator.py  test_cover_letter_stream.py  test_injection_classifier.py  test_lifecycle.py  test_logs_no_pii.py  test_mcp_tools.py  test_pii_redaction.py  test_profile_loader.py  test_prompt_loader.py  test_provider_fallback.py  test_research_agent.py  test_scraper_base.py  test_scraper_http_mocked.py  test_settings_store.py  test_workflow_assembly.py  test_workflow_hitl.py
(+57 files in other folders)
