[project]
name = "careeros"
version = "0.1.0"
description = "CareerOS AI — LangGraph-based agentic workflow platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "httpx>=0.27",
    "openai>=1.54",
    "anthropic>=0.39",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "langsmith>=0.1.140",
    "tenacity>=9.0",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "cryptography>=43",
    "python-jose[cryptography]>=3.3",
    "jinja2>=3.1",
    "sse-starlette>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-python-jose",
    "httpx>=0.27",
    "respx>=0.21",
    "types-pyyaml>=6.0",
]

[project.scripts]
careeros = "app.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "ASYNC", "S", "C4", "TID"]
ignore = ["S101"]  # allow asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"evals/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "evals"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
